[metadata]
name = marsrover
version = 0.1.0
author = pysatellite
author_email = pysatellite@gmail.com
description = Let's go grow potatoes on Mars!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://becky2sawyer.github.io/mars-rover
project_urls =
    Bug Tracker = https://github.com/becky2sawyer/mars-rover/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
license = GNU General Public License (GPL)
platform = macOS

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    marsrover-ping = marsrover:ping
